--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -21,7 +21,9 @@
 }
 
 .hero{
-    height: 300px;
+    height: 400px;
     width: 100%;
     background-image: url('/images/jumbotron.jpg');
+    background-repeat: no-repeat; 
+    background-size: cover;
 }
