--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -12,6 +12,7 @@
 .header{
    background-color: white;
    display: flex;
+   align-items: center;
    width: 100%;
    height: 150px;
    color: #464646;
