--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
  
 
 $primary-color: #0282f9;
+$secondary-color:#464646;
 @import "partialsCss/header";
 @import "partialsCss/footer";
 
@@ -21,5 +22,7 @@ $primary-color: #0282f9;
 @font-face {font-family: "250072c23613fe0b - subset of Greta Sans Pro Bld";
   src: url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.eot");
   src: url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.eot?#iefix")
- }
+  format("embedded-opentype"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.woff")
+  format("woff"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.svg#250072c23613fe0b - subset of Greta Sans Pro Bld")
+  format("svg"); }
 @import url(//db.onlinewebfonts.com/c/60d534f9b4ded0f0b50514c27ee3e83a?family=250072c23613fe0b+-+subset+of+Greta+Sans+Pro+Bld);
