--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,14 +24,38 @@
 .header {
   background-color: white;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 150px;
   color: #464646;
 }
 
-.header li {
-  display: inline;
+.header img {
+  background-color: aqua;
+}
+
+.listmenu {
+  width: 100%;
+  margin-left: 40px;
+  margin-right: 40px;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: aqua;
+}
+
+.listmenu a {
+  color: #464646;
+  text-decoration: none;
+}
+
+.searchbar {
+  height: 50px;
+  width: 200px;
+  background-color: aqua;
 }
 
 .hero {
@@ -50,34 +74,59 @@
   background-size: cover;
   overflow: hidden;
   color: white;
+  position: relative;
+}
+
+.bigfooter img {
+  position: relative;
+  bottom: 50px;
 }
 
 .frame {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
 }
 
 .footer-lists {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .footerCol {
+  display: inline-block;
   text-transform: uppercase;
   margin-right: 40px;
+  font-size: 30px;
 }
 
 .footerCol li {
   text-transform: none;
   list-style: none;
-  opacity: 70%;
+  margin-top: 10px;
+  opacity: 60%;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+
+.footerRow {
+  height: 100%;
+  width: 100%;
+}
+
+.footerRow p {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  opacity: 60%;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
 }
 
 @font-face {
   font-family: "250072c23613fe0b - subset of Greta Sans Pro Bld";
   src: url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.eot");
-  src: url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.eot?#iefix");
+  src: url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.woff") format("woff"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/60d534f9b4ded0f0b50514c27ee3e83a.svg#250072c23613fe0b - subset of Greta Sans Pro Bld") format("svg");
 }
 
