--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -1,4 +1,3 @@
-
 .topperbar{
     background-color: $primary-color;
     height: 20px;
@@ -6,20 +5,47 @@
 }
 .mini-menu{
     width: 200px;
-    color: white
+    color: white;
 }
 
 .header{
    background-color: white;
    display: flex;
+   justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 150px;
-   color: #464646;
-    & li{
-        display: inline;
-    }
+   color: $secondary-color;
+   & img{
+       background-color: aqua;
+    } 
 }
+
+
+.listmenu{
+    width: 100%;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: aqua;  
+        & a{
+            color: $secondary-color;
+            text-decoration: none;
+        }
+}
+
+
+
+.searchbar{
+    height: 50px;
+    width: 200px;
+    background-color: aqua;
+}
+
 
 .hero{
     height: 400px;
