--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -1,6 +1,5 @@
 .topperbar{
     background-color: $primary-color;
-    height: 20px;
     width: 100%;
 }
 .mini-menu{
@@ -15,10 +14,10 @@
    align-items: center;
    width: 100%;
    height: 150px;
+   font-weight: 700;
+   font-size: 20px;
+   font-weight: 700;
    color: $secondary-color;
-   & img{
-       background-color: aqua;
-    } 
 }
 
 
@@ -26,12 +25,12 @@
     width: 100%;
     margin-left: 40px;
     margin-right: 40px;
+    letter-spacing: 0px;
     display: flex;
     justify-content: space-around;
     list-style: none;
     text-align: center;
     text-transform: uppercase;
-    background-color: aqua;  
         & a{
             color: $secondary-color;
             text-decoration: none;
@@ -39,13 +38,24 @@
 }
 
 
-
 .searchbar{
-    height: 50px;
-    width: 200px;
-    background-color: aqua;
+    height: 25px;
+    width: 200px;  
 }
 
+& input{
+    width: 100%;
+    font-size: 20px;
+    text-align: right;
+    background-color: transparent;
+    border: none;
+    border-bottom: 3px solid $primary-color;
+
+    &::placeholder {
+        color: $secondary-color;
+        font-weight: 700;
+    }
+}
 
 .hero{
     height: 400px;
