--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "250072c23613fe0b - subset of Greta Sans Pro Bld";
+    font-family: 'Noto Sans JP', sans-serif;
   }
   .section{
    padding-left: 100px;
