--- a/resources/sass/partialsCss/_footer.scss
+++ b/resources/sass/partialsCss/_footer.scss
@@ -57,3 +57,10 @@ text-transform: uppercase;
         font-weight: lighter;
     }
 }
+
+
+.smallfooter{
+    height: 100px;
+    width: 100%;
+    background-color: $secondary-color;
+}
