--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "250072c23613fe0b - subset of Greta Sans Pro Bld";
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 .section {
@@ -55,7 +55,10 @@
 .searchbar {
   height: 50px;
   width: 200px;
-  background-color: aqua;
+}
+
+.searchbar input {
+  border-bottom: 3px solid #0282f9;
 }
 
 .hero {
@@ -122,6 +125,12 @@
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
+}
+
+.smallfooter {
+  height: 100px;
+  width: 100%;
+  background-color: #464646;
 }
 
 @font-face {
