--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -43,9 +43,11 @@
 .searchbar{
     height: 50px;
     width: 200px;
-    background-color: aqua;
 }
 
+.searchbar input{
+    border-bottom: 3px solid $primary-color;
+}
 
 .hero{
     height: 400px;
