--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -1,10 +1,19 @@
 .topperbar{
-    background-color: $primary-color;
+    display: flex;
+    justify-content: flex-end;
     width: 100%;
+    text-transform: uppercase;
+    font-size:x-small;
+    background-color: $primary-color;
 }
 .mini-menu{
-    width: 200px;
+    width: 400px;
+    align-items: center;
     color: white;
+    display: flex;
+    
+    & >* {margin-left: 20px;}
+
 }
 
 .header{
@@ -41,9 +50,12 @@
 .searchbar{
     display: flex;
     width: 200px;
+    
 }
 
 .searchbar input{
+    padding: 5px;
+    border: none;
     border-bottom: 3px solid $primary-color;
     text-align: right;
     
