--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,5 +13,6 @@
 
 $primary-color: #0282f9;
 $secondary-color:#464646;
+$tertiary-color: #1c1c1c;
 @import "partialsCss/header";
 @import "partialsCss/footer";
