--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,3 +16,4 @@ $secondary-color:#464646;
 $tertiary-color: #1c1c1c;
 @import "partialsCss/header";
 @import "partialsCss/footer";
+@import "partialsCss/cardsCont";
