--- a/public/css/app.css
+++ b/public/css/app.css
@@ -160,18 +160,33 @@
 }
 
 .container {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #1c1c1c;
   display: flex;
   flex-wrap: wrap;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: calc(100% / 6);
   text-transform: uppercase;
   text-align: center;
   font-size: smaller;
   color: white;
+}
+
+.coverimg {
+  height: 200px;
+  width: 200px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  background-color: yellow;
+}
+
+.coverimg img {
+  width: 100%;
 }
 
