--- a/resources/sass/partialsCss/_cardsCont.scss
+++ b/resources/sass/partialsCss/_cardsCont.scss
@@ -1,15 +1,30 @@
 .container{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 90px;
+    padding-bottom: 90px;
     background-color: $tertiary-color;
     display: flex;
     flex-wrap: wrap;
 }
 
 .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: calc(100% / 6);
     text-transform: uppercase;
     text-align: center;
     font-size: smaller;
     color: white;
+}
+
+.coverimg{
+    height: 200px;
+    width: 200px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    background-color: yellow;
+    & img{
+        width: 100%;
+
+    }
 }
