--- a/resources/sass/partialsCss/_cardsCont.scss
+++ b/resources/sass/partialsCss/_cardsCont.scss
@@ -9,17 +9,19 @@
 .card{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: calc(100% / 6);
+    margin-right: 10px;
+    margin-left: 10px;
+   
+    width: calc(100% / 7);
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
     font-size: smaller;
     color: white;
 }
 
 .coverimg{
     height: 200px;
-    width: 200px;
+    width: 100%;
     margin-bottom: 20px;
     overflow: hidden;
     background-color: yellow;
