--- a/public/css/app.css
+++ b/public/css/app.css
@@ -165,6 +165,20 @@
   background-color: #1c1c1c;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
+}
+
+.titleCont {
+  height: 60px;
+  width: 200px;
+  color: white;
+  text-transform: uppercase;
+  background-color: #0282f9;
+  position: absolute;
+  top: -25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
@@ -174,17 +188,21 @@
   margin-left: 10px;
   width: calc(100% / 7);
   text-transform: uppercase;
-  text-align: left;
   font-size: smaller;
   color: white;
+}
+
+.card h4 {
+  font-weight: 200;
+  text-align: left;
 }
 
 .coverimg {
   height: 200px;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   overflow: hidden;
-  background-color: yellow;
 }
 
 .coverimg img {
