aggiunti stili bottone

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -209,3 +209,25 @@
   width: 100%;
 }
 
+.centerbuttonDiv {
+  width: 100%;
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.button1 {
+  text-align: center;
+  height: 40px;
+  width: 200px;
+  color: white;
+  background-color: #0282f9;
+  border-style: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.button1:active {
+  border-style: none;
+}
+
