--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,4 @@ $tertiary-color: #1c1c1c;
 @import "partialsCss/header";
 @import "partialsCss/footer";
 @import "partialsCss/cardsCont";
+@import "partialsCss/buttons";
