--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -73,3 +73,7 @@
     background-repeat: no-repeat; 
     background-size: cover;
 }
+
+input:focus, textarea:focus, select:focus{
+    outline: none;
+}
