--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,5 @@ $tertiary-color: #1c1c1c;
 @import "partialsCss/footer";
 @import "partialsCss/cardsCont";
 @import "partialsCss/buttons";
+@import "partialsCss/externalLinks";
+
