--- a/public/css/app.css
+++ b/public/css/app.css
@@ -238,8 +238,28 @@ select:focus {
 }
 
 .externalLinks {
-  height: 300px;
+  height: 150px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
   background-color: #0282f9;
+}
+
+.linkSect {
+  display: flex;
+  align-items: center;
+  width: calc(100% / 5);
+}
+
+.linkSect img {
+  height: 50px;
+}
+
+.linkSect h4 {
+  margin-left: 15px;
+  font-weight: 100;
+  text-transform: uppercase;
 }
 
