--- a/resources/sass/partialsCss/_buttons.scss
+++ b/resources/sass/partialsCss/_buttons.scss
@@ -20,3 +20,13 @@
     }
 }
 
+
+.button2{
+    height: 60px;
+    width: 200px;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: white;
+    border: 3px solid $primary-color;
+    background-color: transparent;
+}
