--- a/resources/sass/partialsCss/_footer.scss
+++ b/resources/sass/partialsCss/_footer.scss
@@ -28,10 +28,10 @@
 
 
 .footerCol{
-    display: inline-block;
-text-transform: uppercase;
- margin-right: 40px ;
- font-size: 30px;
+   display: inline-block;
+   text-transform: uppercase;
+   margin-right: 40px ;
+   font-size: 30px;
 
     & li {
     text-transform: none;
@@ -58,9 +58,17 @@ text-transform: uppercase;
     }
 }
 
-
 .smallfooter{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     height: 100px;
     width: 100%;
     background-color: $secondary-color;
+}
+
+.socialList{
+    display: flex;
+    background-color: yellow;
 }
