--- a/resources/sass/partialsCss/_footer.scss
+++ b/resources/sass/partialsCss/_footer.scss
@@ -69,6 +69,8 @@
 }
 
 .socialList{
+    font-size: 20px;
+    text-transform: uppercase;
+    color: $primary-color;
     display: flex;
-    background-color: yellow;
 }
