--- a/public/css/app.css
+++ b/public/css/app.css
@@ -169,8 +169,10 @@ select:focus {
 }
 
 .socialList {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #0282f9;
   display: flex;
-  background-color: yellow;
 }
 
 .container {
@@ -246,8 +248,8 @@ select:focus {
 }
 
 .button2 {
-  height: 60px;
-  width: 200px;
+  height: 50px;
+  width: 170px;
   font-size: 20px;
   text-transform: uppercase;
   color: white;
@@ -267,6 +269,7 @@ select:focus {
 
 .linkSect {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: calc(100% / 5);
 }
