--- a/resources/sass/partialsCss/_externalLinks.scss
+++ b/resources/sass/partialsCss/_externalLinks.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     width: calc(100% / 5);
+    cursor: pointer;
 
     & img{
         height: 50px;
