--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,7 +37,7 @@
 }
 
 .mini-menu > * {
-  margin-left: 20px;
+  margin-left: 50px;
 }
 
 .header {
@@ -59,10 +59,12 @@
 
 .listmenu {
   width: 100%;
+  height: 100%;
   margin-left: 40px;
   margin-right: 40px;
   letter-spacing: 0px;
   display: flex;
+  align-items: center;
   justify-content: space-around;
   list-style: none;
   text-align: center;
@@ -72,6 +74,13 @@
 .listmenu a {
   color: #303030;
   text-decoration: none;
+  padding-bottom: 56px;
+}
+
+.listmenu a:active,
+.listmenu a:hover {
+  color: #0282f9;
+  border-bottom: 5px solid #0282f9;
 }
 
 .searchbar {
