--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -22,7 +22,7 @@
     color: white;
     display: flex;
     
-    & >* {margin-left: 20px;}
+    & >* {margin-left: 50px;}
 
 }
 
@@ -46,18 +46,27 @@
 
 .listmenu{
     width: 100%;
+    height: 100%;
     margin-left: 40px;
     margin-right: 40px;
     letter-spacing: 0px;
     display: flex;
+    align-items: center;
     justify-content: space-around;
+
     list-style: none;
     text-align: center;
     text-transform: uppercase;
-        & a{
-            color: $secondary-color;
-            text-decoration: none;
-        }
+}
+
+.listmenu a{
+    color: $secondary-color;
+    text-decoration: none;
+    padding-bottom: 56px;
+    &:active, &:hover{
+        color: $primary-color;
+        border-bottom: 5px solid $primary-color;
+    }
 }
 
 
