--- a/public/css/app.css
+++ b/public/css/app.css
@@ -211,6 +211,7 @@ select:focus {
   padding-bottom: 30px;
   background-color: #1c1c1c;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   position: relative;
 }
@@ -223,6 +224,7 @@ select:focus {
   background-color: #0282f9;
   position: absolute;
   top: -25px;
+  left: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
