--- a/public/css/app.css
+++ b/public/css/app.css
@@ -319,3 +319,44 @@ select:focus {
   text-transform: uppercase;
 }
 
+.singleComicCont {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.coverCont {
+  height: 60px;
+  width: 200px;
+  color: white;
+  text-transform: uppercase;
+  background-color: #0282f9;
+  position: absolute;
+  top: -25px;
+  left: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fullcardInfo {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
+  margin-left: 10px;
+  width: calc(100% / 7);
+  background-color: gray;
+  text-transform: uppercase;
+  font-size: smaller;
+  color: white;
+}
+
+.fullcardInfo h4 {
+  font-weight: 200;
+  text-align: left;
+}
+
