--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,4 +19,5 @@ $tertiary-color: #1c1c1c;
 @import "partialsCss/cardsCont";
 @import "partialsCss/buttons";
 @import "partialsCss/externalLinks";
+@import "partialsCss/singleComic";
 
