--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -16,14 +16,12 @@
     }
 }
 
-.mini-menu{
+.mini-nav{
     width: 400px;
     align-items: center;
     color: white;
-    display: flex;
-    
+    display: flex;  
     & >* {margin-left: 50px;}
-
 }
 
 .header{
@@ -43,8 +41,7 @@
 }
 
 
-
-.listmenu{
+.listnav{
     width: 100%;
     height: 100%;
     margin-left: 40px;
@@ -59,7 +56,7 @@
     text-transform: uppercase;
 }
 
-.listmenu a{
+.listnav a{
     color: $secondary-color;
     text-decoration: none;
     padding-bottom: 56px;
