--- a/public/css/app.css
+++ b/public/css/app.css
@@ -336,12 +336,18 @@ select:focus {
 .coverCont {
   height: 60px;
   width: 200px;
-  color: white;
-  text-transform: uppercase;
+  position: absolute;
+  bottom: 260px;
+  left: 100px;
+}
+
+.divider {
+  height: 80px;
   background-color: #0282f9;
   position: absolute;
   top: -25px;
-  left: 100px;
+  left: 0px;
+  right: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
