--- a/public/css/app.css
+++ b/public/css/app.css
@@ -295,6 +295,36 @@ select:focus {
   cursor: pointer;
 }
 
+.buyButtons {
+  width: 100%;
+  display: flex;
+}
+
+.button3 {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #55ba59;
+  color: white;
+  height: 50px;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button3-2 {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #55ba59;
+  color: white;
+  text-transform: uppercase;
+  height: 50px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .externalLinks {
   height: 150px;
   width: 100%;
@@ -354,19 +384,20 @@ select:focus {
 }
 
 .fullcardInfo {
-  display: flex;
-  flex-direction: column;
-  margin-right: 10px;
-  margin-left: 10px;
-  width: calc(100% / 7);
-  background-color: gray;
-  text-transform: uppercase;
-  font-size: smaller;
-  color: white;
+  width: 100%;
+  height: 300px;
+  color: gray;
+  font-weight: 300;
 }
 
-.fullcardInfo h4 {
-  font-weight: 200;
-  text-align: left;
+.fullcardInfo h1 {
+  color: #003f5e;
+  margin-bottom: 20px;
+}
+
+.fullcardInfo p {
+  margin-top: 20px;
+  color: gray;
+  font-weight: 400;
 }
 
