--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
 $primary-color: #0282f9;
 $secondary-color:#303030;
 $tertiary-color: #1c1c1c;
+$cardFontCl: #003f5e;
+
 @import "partialsCss/header";
 @import "partialsCss/footer";
 @import "partialsCss/cardsCont";
