--- a/resources/sass/partialsCss/_singleComic.scss
+++ b/resources/sass/partialsCss/_singleComic.scss
@@ -8,6 +8,7 @@
     position: relative;
 }
 
+
 .coverCont{
     height: 60px;
     width: 200px;
@@ -33,19 +34,19 @@
 
 
 .fullcardInfo{
-    display: flex;
-    flex-direction: column;
-    margin-right: 10px;
-    margin-left: 10px;
-    width: calc(100% / 7);
-    background-color:gray;
-    text-transform: uppercase;
-    font-size: smaller;
-    color: white;
+    width: 100%;
+    height: 300px;
+    color:gray;
+    font-weight: 300;
 
-    & h4{
-        font-weight: 200;
-        text-align: left;
+    & h1{
+        color: $cardFontCl;
+        margin-bottom: 20px;
+    }
+    & p{
+        margin-top: 20px;
+        color: gray;
+        font-weight: 400;
     }
 }
 
