--- a/public/css/app.css
+++ b/public/css/app.css
@@ -407,13 +407,10 @@ select:focus {
 }
 
 .specsCol {
+  padding-right: 40px;
   width: 50%;
   display: flex;
   flex-direction: column;
-}
-
-.specsCol > * {
-  border-bottom: 1px solid gray;
 }
 
 .specsCol h2 {
@@ -421,10 +418,14 @@ select:focus {
 }
 
 .specsSect {
+  border-bottom: 1px solid gray;
+  padding-top: 5px;
+  padding-bottom: 5px;
   display: flex;
 }
 
 .specsTag {
-  width: 30%;
+  width: 250px;
+  margin-right: 100px;
 }
 
