--- a/resources/sass/partialsCss/_singleComic.scss
+++ b/resources/sass/partialsCss/_singleComic.scss
@@ -58,11 +58,12 @@
 }
 
 .specsCol{
+    padding-right: 40px;
     width: 50%;
     display: flex;
     flex-direction: column;
     &>*{
-       border-bottom: 1px solid gray;
+     
     }
     & h2{
     color: $cardFontCl;
@@ -70,10 +71,14 @@
 }
 
 .specsSect{
+    border-bottom: 1px solid gray;
+    padding-top: 5px;
+    padding-bottom: 5px;
     display: flex;
 }
 
 
 .specsTag{
-width: 30%;
+width: 250px;
+margin-right: 100px;
 }
