--- a/public/css/app.css
+++ b/public/css/app.css
@@ -356,11 +356,21 @@ select:focus {
 .singleComicCont {
   padding-top: 90px;
   padding-bottom: 30px;
+  padding-left: 300px;
+  padding-right: 300px;
   background-color: white;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   position: relative;
+}
+
+.singleComicCont * {
+  border: 1px solid gray;
+}
+
+.comicContWrapper {
+  margin-left: 300px;
 }
 
 .coverCont {
@@ -386,7 +396,6 @@ select:focus {
 .fullcardInfo {
   width: 100%;
   height: 300px;
-  color: gray;
   font-weight: 300;
 }
 
@@ -402,13 +411,16 @@ select:focus {
 }
 
 .specs {
+  padding-bottom: 30px;
+  padding-left: 300px;
+  padding-right: 300px;
+  width: 100%;
   color: #003f5e;
   display: flex;
   background-color: #f6f6f6;
 }
 
 .specsCol {
-  padding-right: 100px;
   width: 50%;
   display: flex;
   flex-direction: column;
