--- a/public/css/app.css
+++ b/public/css/app.css
@@ -365,10 +365,6 @@ select:focus {
   position: relative;
 }
 
-.singleComicCont * {
-  border: 1px solid gray;
-}
-
 .comicContWrapper {
   margin-left: 300px;
 }
@@ -396,6 +392,7 @@ select:focus {
 .fullcardInfo {
   width: 100%;
   height: 300px;
+  color: gray;
   font-weight: 300;
 }
 
