--- a/resources/sass/partialsCss/_singleComic.scss
+++ b/resources/sass/partialsCss/_singleComic.scss
@@ -9,7 +9,6 @@
     justify-content: center;
     flex-wrap: wrap;
     position: relative;
-    & * {border:1px solid gray}
 }
 
 
@@ -44,6 +43,8 @@
 .fullcardInfo{
     width: 100%;
     height: 300px;
+   
+    color:gray;
     font-weight: 300;
 
     & h1{
@@ -56,6 +57,7 @@
         font-weight: 400;
     }
 }
+
 
 
 .specs{
