--- a/public/css/app.css
+++ b/public/css/app.css
@@ -82,7 +82,7 @@
   border-bottom: 5px solid #0282f9;
 }
 
-a.active {
+.listnav a.active {
   color: #0282f9;
   border-bottom: 5px solid #0282f9;
 }
@@ -144,10 +144,15 @@ select:focus {
   bottom: 50px;
 }
 
-.frame {
+.bigfooter a {
+  color: #0282f9;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.footerFrame {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
 }
 
 .footer-lists {
