--- a/resources/sass/partialsCss/_footer.scss
+++ b/resources/sass/partialsCss/_footer.scss
@@ -7,7 +7,6 @@
     overflow: hidden;
     color: white;
     position: relative;
-
     & img {
     position:relative;
     bottom: 50px;
@@ -15,10 +14,16 @@
 }
 
 
-.frame{
+.bigfooter a{
+    color: $primary-color;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.footerFrame{
     display: flex;
     justify-content: space-between;
-     align-items: stretch;
+   
 }
 
 .footer-lists{
