--- a/resources/sass/partialsCss/_infoComic.scss
+++ b/resources/sass/partialsCss/_infoComic.scss
@@ -66,7 +66,7 @@
     width: 100%;
     color: $cardFontCl;
     display: flex;
-    background-color: #f6f6f6;
+    background-color: $clearbg;
 }
 
 .specsCol{
@@ -101,3 +101,4 @@
 .enlightext{
     color: $primary-color
 } 
+
