--- a/public/css/app.css
+++ b/public/css/app.css
@@ -384,7 +384,7 @@ select:focus {
   background-color: white;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
   position: relative;
 }
 
@@ -413,8 +413,8 @@ select:focus {
 }
 
 .fullcardInfo {
-  width: 100%;
-  height: 300px;
+  width: 70%;
+  height: auto;
   color: gray;
   font-weight: 300;
 }
@@ -428,6 +428,12 @@ select:focus {
   margin-top: 20px;
   color: gray;
   font-weight: 400;
+}
+
+.box {
+  text-transform: uppercase;
+  text-align: right;
+  width: 30%;
 }
 
 .specs {
