--- a/resources/sass/partialsCss/_infoComic.scss
+++ b/resources/sass/partialsCss/_infoComic.scss
@@ -7,7 +7,7 @@
     background-color: white;
     display: flex;  
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
     position: relative;
 }
 
@@ -40,9 +40,8 @@
 
 
 .fullcardInfo{
-    width: 100%;
-    height: 300px;
-   
+    width: 70%;
+    height: auto;
     color:gray;
     font-weight: 300;
 
@@ -55,6 +54,13 @@
         color: gray;
         font-weight: 400;
     }
+}
+
+
+.box{
+    text-transform: uppercase;
+    text-align: right;
+    width: 30%;
 }
 
 
