--- a/resources/sass/partialsCss/_infoComic.scss
+++ b/resources/sass/partialsCss/_infoComic.scss
@@ -6,7 +6,7 @@
     
     background-color: white;
     display: flex;  
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: relative;
 }
@@ -40,7 +40,7 @@
 
 
 .fullcardInfo{
-    width: 70%;
+    width: 68%;
     height: auto;
     color:gray;
     font-weight: 300;
