--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,7 +43,7 @@
 .header {
   background-color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 150px;
@@ -60,10 +60,11 @@
 .listnav {
   width: 100%;
   height: 100%;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
   letter-spacing: 0px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   list-style: none;
@@ -89,7 +90,6 @@
 
 .searchbar {
   display: flex;
-  width: 200px;
 }
 
 .searchbar input {
