--- a/resources/sass/partialsCss/_header.scss
+++ b/resources/sass/partialsCss/_header.scss
@@ -27,7 +27,7 @@
 .header{
    background-color: white;
    display: flex;
-   justify-content: space-between;
+   justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 150px;
@@ -44,10 +44,11 @@
 .listnav{
     width: 100%;
     height: 100%;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     letter-spacing: 0px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
 
@@ -73,8 +74,6 @@
 
 .searchbar{
     display: flex;
-    width: 200px;
-    
 }
 
 .searchbar input{
